src/components/Footer/index.module.scss
@import "../../styles/helpers.scss";
@import "../../styles/colors.scss";

.footer {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: stretch;
   justify-content: flex-start;
   gap: vw(16px, 360px);

   @media screen and (min-width: 414px) {
      padding: vw(30px, 414px) vw(28px, 414px);
      gap: vw(16px, 414px);
   }

   @media screen and (min-width: 920px) {
      flex-direction: row;
      flex-wrap: nowrap;
      align-items: flex-start;
      justify-content: flex-start;

      padding: 0px;
      gap: vw(120px);

      width: vw(1440px);
      margin: 0px auto;
   }

   @media screen and (min-width: 1600px) {
      gap: 120px;
      width: 1440px;
   }

   &__title {
      font-family: Rubik;
      font-size: vw(14px, 360px);
      font-weight: 400;
      line-height: vw(17px, 360px);
      letter-spacing: 0em;
      text-align: center;
      margin-bottom: vw(16px, 360px);

      color: $footer-text;

      @media screen and (min-width: 414px) {
         font-size: vw(14px, 414px);
         line-height: vw(17px, 414px);
         margin-bottom: vw(16px, 414px);
      }

      @media screen and (min-width: 920px) {
         font-size: vw(14px);
         line-height: vw(17px);
         margin-bottom: vw(16px);
      }

      @media screen and (min-width: 1600px) {
         font-size: 14px;
         line-height: 17px;
         margin-bottom: 16px;
      }
   }
}

.column,
.asside {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: flex-start;

   min-width: 100%;

   @media screen and (min-width: 920px) {
      min-width: auto;
      align-items: flex-start;
      max-width: vw(437px);
   }

   @media screen and (min-width: 1600px) {
      max-width: 437px;
   }

   &__group {
      display: flex;
      justify-content: space-between;
      align-items: flex-start;
      flex-direction: row;
      flex-wrap: nowrap;

      padding: 0px vw(12px, 360px);

      width: 100%;
      @media screen and (min-width: 414px) {
         padding: 0px vw(12px, 414px);
      }

      @media screen and (min-width: 920px) {
         padding: 0px vw(12px);
         max-width: vw(470px);
      }

      @media screen and (min-width: 1600px) {
         padding: 0px 12px;
         max-width: 470px;
      }
   }
}

.asside {
   @media screen and (min-width: 920px) {
      flex-direction: row;
      max-width: none;
      width: 100%;
   }
}

.description {
   padding: 0px vw(15px, 360px);
   margin-bottom: vw(24px, 360px);

   @media screen and (min-width: 414px) {
      padding: 0px vw(15px, 414px);
      margin-bottom: vw(24px, 414px);
   }

   @media screen and (min-width: 920px) {
      padding: 0px 0px;
      margin-bottom: vw(40px);
   }

   @media screen and (min-width: 1600px) {
      margin-bottom: 40px;
   }

   &__text {
      font-family: Rubik;
      font-size: vw(14px, 360px);
      font-weight: 400;
      line-height: vw(24px, 360px);
      letter-spacing: 0em;
      text-align: center;
      color: $footer-text;

      @media screen and (min-width: 414px) {
         font-size: vw(14px, 414px);
         line-height: vw(24px, 414px);
      }

      @media screen and (min-width: 920px) {
         font-size: vw(16px);
         line-height: vw(24px);
         text-align: left;
      }

      @media screen and (min-width: 1600px) {
         font-size: 16px;
         line-height: 24px;
      }
   }
}

.socials_list {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   gap: vw(32px, 360px);

   @media screen and (min-width: 414px) {
      gap: vw(32px, 414px);
   }

   @media screen and (min-width: 920px) {
      gap: vw(32px);
   }

   @media screen and (min-width: 1600px) {
      gap: 32px;
   }

   .social {
      svg {
         width: vw(48px, 360px);
         height: vw(48px, 360px);

         @media screen and (min-width: 414px) {
            width: vw(48px, 414px);
            height: vw(48px, 414px);
         }

         @media screen and (min-width: 920px) {
            width: vw(48px);
            height: vw(48px);
         }

         @media screen and (min-width: 1600px) {
            width: 48px;
            height: 48px;
         }
      }
   }
}

.navigation,
.community {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   flex-wrap: nowrap;
   justify-content: center;

   width: auto;
}

.links_list {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: flex-start;
   list-style: none;
   gap: vw(16px, 360px);

   @media screen and (min-width: 414px) {
      gap: vw(16px, 414px);
   }

   @media screen and (min-width: 920px) {
      gap: vw(16px);
   }

   @media screen and (min-width: 1600px) {
      gap: 16px;
   }

   &__item {
      width: auto;
   }

   &__link {
      font-family: Rubik;
      font-size: vw(16px, 360px);
      font-weight: 400;
      line-height: vw(19px, 360px);
      letter-spacing: 0em;
      text-align: left;

      color: $white;

      text-decoration: none;

      cursor: pointer;

      @media screen and (min-width: 414px) {
         font-size: vw(16px, 414px);
         line-height: vw(19px, 414px);
      }

      @media screen and (min-width: 920px) {
         font-size: vw(16px);
         line-height: vw(19px);
      }

      @media screen and (min-width: 1600px) {
         font-size: 16px;
         line-height: 19px;
      }

      &_active {
         color: $accent;
      }
   }
}

.audit {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: flex-start;
   width: vw(163px, 360px);
   height: vw(168px, 360px);

   @media screen and (min-width: 414px) {
      width: vw(163px, 414px);
      height: vw(168px, 414px);
   }

   @media screen and (min-width: 920px) {
      width: vw(163px);
      height: vw(168px);
      justify-content: flex-start;
      margin-left: auto;
   }

   @media screen and (min-width: 1600px) {
      width: 163px;
      height: 168px;
   }

   &__link {
      img {
         width: vw(163px, 360px);
         height: vw(35px, 360px);

         @media screen and (min-width: 414px) {
            width: vw(163px, 414px);
            height: vw(35px, 414px);
         }

         @media screen and (min-width: 920px) {
            width: vw(163px);
            height: vw(35px);
         }

         @media screen and (min-width: 1600px) {
            width: 163px;
            height: 35px;
         }
      }
   }
}

